--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
                     </li>
                 </ul>
             </nav>
+
+            <img src="./img/menu-icon.png" class="icon-menu">
+            <nav id="menu-mobile" class="menu hiden">
+                <a href="#">Home</a>
+                <br />
+                <a href="#">Comunidade</a>
+                <br />
+                <a href="#">Contatos</a>
+                <br />
+            </nav>
         </header>
 
-        <main>
+        <main >
             <section class="section-hero" id="hero">
                 <div class="hero">
                     <div class="hero-text-box">
@@ -62,10 +72,10 @@
                             suporte a economia informal e um ponto de encontro
                             entre as pessoas das mais diversas áreas e regiões.
                         </p>
-                        <a href="#pricing" class="btn btn--full margin-right-sm"
+                        <a href="#pricing" class="btn btn--full margin-right-sm "
                             >Nossos Cursos</a
                         >
-                        <a href="#how" class="btn btn--outline"
+                        <a href="#how" class="btn btn--outline smooth"
                             >Saiba mais &darr;</a
                         >
                     </div>
@@ -357,9 +367,9 @@
                   </ul>
               </div>
               <div class="profile box">
-                <img class="profile-pic" src="img/" alt="Profile" />
+                <img class="profile-pic" src="img/lucas.jpg" alt="Profile" />
                 <h1 class="title">Lucas Roque</h1>
-                <span>..., Brasil</span>
+                <span>Brasil</span>
                 <p>DESENVOLVEDOR FULL STACK <br>
                   Estudante da StartSe(Tech/Academy)</p>
                 <ul class="social-menu">
@@ -369,7 +379,7 @@
                       </li>
                       
                       <li>
-                        <a href="#" target="blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com" target="blank"><i class="fab fa-linkedin-in"></i></a>
                       </li>
                   </ul>
               </div>
