menu mobile atualizado

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 
             <img src="./img/menu-icon.png" class="icon-menu">
             <nav id="menu-mobile" class="menu hiden">
-                <a href="#">Home</a>
+                <a href="#how">Artigos</a>
                 <br />
-                <a href="#">Comunidade</a>
+                <a href="#pricing">Nossos Cursos</a>
+                <br/>
+                <a href="#about-us">Sobre nós</a>
                 <br />
-                <a href="#">Contatos</a>
+                <a href="#cta">Fale Conosco</a>
                 <br />
             </nav>
         </header>
